<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Puissance 4 - Paris 8</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_play">Play</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="connect4">Paris8 - Jeu Puissance 4 </string>
    <string name="titletop">uissance 4 </string>
    <string name="play">1 JOUEUR</string>
    <string name="timerVal">00:00:00</string>
    <string name="multiplay">2 JOUEURS</string>
    <string name="score">HIGHSCORES</string>
    <string name="about">Apropos</string>
    <string name="exit">Quitter</string>
    <string name="s21">21</string>
    <string name="replay">Replay</string>
    <string name="menu">Menu principale</string>
    <string name="player1">Joueur 1</string>
    <string name="player2">Joueur 2</string>
    <string name="timer">00:00</string>
    <string name="title_activity_apropos">à propos</string>
    <string name="txtapropos">Ce jeu est réalisé par GOURGAN Hicham et AZIZ Ibazizene , étudiants de l\'université PARIS 8</string>
    
</resources>