<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/game_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/cachecolor"
    android:orientation="vertical">
	
    <LinearLayout
        android:id="@+id/affichagelogo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/connect4"
            android:paddingLeft="20dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/logoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/titletop"
            android:textColor="@color/DarkRed"
            android:textSize="42sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/affichageNames"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="horizontal"
        android:paddingBottom="0dp" >

        <TextView
            android:id="@+id/score1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.28"
            android:drawableLeft="@drawable/cerclejaune"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/s21"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/timer"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/score2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.46"
            android:drawableRight="@drawable/cerclerouge"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/s21"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>    

    <LinearLayout
        android:id="@+id/affichagebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="horizontal"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.48"
            android:text="@string/player1"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/vide"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:background="@drawable/vs"
            android:gravity="center"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.46"
            android:text="@string/player2"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/grille"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="vertical" >

    </LinearLayout>
    
</LinearLayout>